# memory-system-skill

./: .gitignore  CLAUDE.md  MEMORY-SYSTEM-SPEC.md  README.md  docker-compose.yml  pyproject.toml  reference-merge-logic.py
scripts/: install.sh  tune_match_threshold.py
skill/: SKILL.md
src/entity_memory/: __init__.py  cli.py  client.py  embedder.py  export.py  extract.py  mcp_server.py  merge.py  models.py  pipeline.py  search.py
src/entity_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli_extract.py  test_client.py  test_dismiss.py  test_embedder.py  test_export.py  test_extract.py  test_mcp_server.py  test_merge.py  test_pipeline.py  test_threshold_tuning.py
tests/data/: match_pairs.json
